--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   </parent>
   
   <artifactId>template-project</artifactId>
-  <version>1.2</version>
+  <version>1.3-SNAPSHOT</version>
   <packaging>hpi</packaging>
   <name>Hudson Template Project plugin</name>
   <url>http://wiki.hudson-ci.org/display/HUDSON/Template+Project+Plugin</url>
@@ -29,10 +29,4 @@
         </plugins>
      </pluginManagement>
   </build>
-
-  <scm>
-    <connection>scm:svn:https://guest@svn.dev.java.net/svn/hudson/tags/template-project-1.2</connection>
-    <developerConnection>scm:svn:https://svn.dev.java.net/svn/hudson/tags/template-project-1.2</developerConnection>
-    <url>https://hudson.dev.java.net/source/browse/hudson/tags/template-project-1.2</url>
-  </scm>
 </project>
