--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.jvnet.hudson.plugins</groupId>
+    <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>1.319</version>
-    <relativePath>../pom.xml</relativePath>
+    <version>1.398</version>
   </parent>
   
   <artifactId>template-project</artifactId>
   <version>1.3-SNAPSHOT</version>
   <packaging>hpi</packaging>
-  <name>Hudson Template Project plugin</name>
-  <url>http://wiki.hudson-ci.org/display/HUDSON/Template+Project+Plugin</url>
+  <name>Template Project plugin</name>
+  <url>http://wiki.jenkins-ci.org/display/JENKINS/Template+Project+Plugin</url>
   <developers>
     <developer>
       <id>huybrechts</id>
@@ -29,4 +28,10 @@
         </plugins>
      </pluginManagement>
   </build>
+
+  <scm>
+    <connection>scm:git:git://github.com/jenkinsci/template-project-plugin.git</connection>
+    <developerConnection>scm:git:git@github.com:jenkinsci/template-project-plugin.git</developerConnection>
+    <url>https://github.com/jenkinsci/template-project-plugin</url>
+  </scm>
 </project>
