--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,21 @@
         </plugins>
      </pluginManagement>
   </build>
-
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>commons-lang</groupId>
+        <artifactId>commons-lang</artifactId>
+        <version>2.4</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+  <dependencies>
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+    </dependency>
+  </dependencies>
   <scm>
     <connection>scm:git:git://github.com/jenkinsci/template-project-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/template-project-plugin.git</developerConnection>
