--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   </parent>
   
   <artifactId>template-project</artifactId>
-  <version>1.4.2</version>
+  <version>1.4.3-SNAPSHOT</version>
   <packaging>hpi</packaging>
   <name>Template Project plugin</name>
   <url>http://wiki.jenkins-ci.org/display/JENKINS/Template+Project+Plugin</url>
