--- a/pom.xml
+++ b/pom.xml
@@ -3,18 +3,33 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>1.420</version>
+    <version>1.570</version>
   </parent>
-  
+
+  <groupId>org.jenkins-ci.plugins</groupId>
   <artifactId>template-project</artifactId>
   <version>1.4.3-SNAPSHOT</version>
   <packaging>hpi</packaging>
+
   <name>Template Project plugin</name>
+  <description>Use builders, publishers and SCM settings from another project.</description>
   <url>http://wiki.jenkins-ci.org/display/JENKINS/Template+Project+Plugin</url>
+
+  <licenses>
+      <license>
+          <name>MIT license</name>
+          <comments>All source code is under the MIT license.</comments>
+      </license>
+  </licenses>
+
   <developers>
     <developer>
       <id>huybrechts</id>
       <name>Tom Huybrechts</name>
+    </developer>
+    <developer>
+      <id>Brantone</id>
+      <name>Brenton B</name>
     </developer>
   </developers>
 
@@ -28,40 +43,52 @@
         </plugins>
      </pluginManagement>
   </build>
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>commons-lang</groupId>
-        <artifactId>commons-lang</artifactId>
-        <version>2.4</version>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
+
   <dependencies>
     <dependency>
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
+      <version>2.4</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jenkins-ci.plugins</groupId>
+      <artifactId>multiple-scms</artifactId>
+      <version>0.5</version>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.jenkins-ci.plugins</groupId>
+      <artifactId>cloudbees-folder</artifactId>
+      <version>4.9</version>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.jenkins-ci.plugins</groupId>
+      <artifactId>matrix-project</artifactId>
+      <version>1.4.1</version>
+      <optional>true</optional>
     </dependency>
   </dependencies>
+
   <scm>
     <connection>scm:git:git://github.com/jenkinsci/template-project-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/template-project-plugin.git</developerConnection>
     <url>https://github.com/jenkinsci/template-project-plugin</url>
   </scm>
 
-    <repositories>
-        <repository>
-            <id>repo.jenkins-ci.org</id>
-            <url>http://repo.jenkins-ci.org/public/</url>
-        </repository>
-    </repositories>
+  <repositories>
+      <repository>
+          <id>repo.jenkins-ci.org</id>
+          <url>http://repo.jenkins-ci.org/public/</url>
+      </repository>
+  </repositories>
 
-    <pluginRepositories>
-        <pluginRepository>
-            <id>repo.jenkins-ci.org</id>
-            <url>http://repo.jenkins-ci.org/public/</url>
-        </pluginRepository>
-    </pluginRepositories>
+  <pluginRepositories>
+      <pluginRepository>
+          <id>repo.jenkins-ci.org</id>
+          <url>http://repo.jenkins-ci.org/public/</url>
+      </pluginRepository>
+  </pluginRepositories>
 </project>  
   
 
